--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ masthead_title           : # overrides the website title displayed in the masthe
 words_per_minute         : 200
 comments:
   provider               : "disqus"
-  disqus:"kweonsunho.github.io"
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+  disqus:
+    shortname            : "kweonsunho.github.io"             : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
