--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus"
   disqus:
-    shortname            : "kweonsunho.github.io"   
+    shortname            : "kweonsunho-github-io-1"   
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
